[project]
name = "inferlib"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=5.2.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
inferlib = "inferlib.server.cli:main"
